--- a/client/src/index.css
+++ b/client/src/index.css
@@ -171,7 +171,7 @@ html.dark body {
   color: #e2e8f0 !important;
 }
 
-/* Targeted image visibility fix - NEVER REMOVE */
+/* Targeted image visibility fix */
 img {
   opacity: 1 !important;
   visibility: visible !important;
